fix(alerts): Remove extra margin on the alert
When the close button is followed by a media component, the margin
should be cleared. There is a special rule that handled this for alerts
inside a table which is how it is shown in the styleguide.

--- a/src/pivotal-ui/components/alerts/alerts.scss
+++ b/src/pivotal-ui/components/alerts/alerts.scss
@@ -172,6 +172,9 @@ other content inside a container on the page (of a width 500px for this example)
     text-decoration: none;
     line-height: .7;
     text-shadow: none;
+    + .media {
+      margin-top: 0;
+    }
   }
 }
 
